--- a/courses.html
+++ b/courses.html
@@ -20,7 +20,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
   </head>
-  <body class="night-sky">
+  <body>
     <div class="px-5 px-md-0">
       <!-- header -->
       <header class="header">
