--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
   </head>
-  <body class="night-sky">
+  <body>
     <div class="px-5 px-md-0">
       <div class="login-box night-sky2">
         <h2 class="lalezar fs-2">ثبت نام</h2>
