--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Courses</title>
+    <title>مدارک کسب شده</title>
     <!-- styles -->
     <link rel="stylesheet" href="./styles/bootstrap.rtl.min.css" />
     <link rel="stylesheet" href="./styles/style.css" />
