--- a/index.html
+++ b/index.html
@@ -381,8 +381,15 @@
           >
             مدارک کسب شده
           </h1>
-          <p class="mt-3 mb-0 center-text">برای مشاهده مدارک کلیک کنید</p>
-          <div class="row py-5 text-center gy-4">
+<p class="mt-3 mb-0 center-text">
+            برای مشاهده مدارک بیشتر در
+            <a
+              style="text-decoration-line: none"
+              href="https://www.linkedin.com/in/ali-barnahad/"
+              >لینکدین</a
+            >
+            کلیک کنید
+          </p>          <div class="row py-5 text-center gy-4">
             <div class="col-md-6 col-lg-4">
               <div class="service-box border-primary p-5" data-aos="fade-left">
                 <i class="fs-1 bi bi-meta"></i>
