--- a/faq.html
+++ b/faq.html
@@ -150,18 +150,16 @@
                   <li class="nav-item px-2 d-md-none">
                     <hr />
                     <p>علیو در <b>شبکه های اجتماعی</b></p>
-                    <div class="row fs-1 w-75">
-                      <div class="col">
-                        <i class="fa-brands fa-linkedin"></i>
+                     <div class="row fs-1 w-75">
+                      <div class="col-6 text-dark">
+                        <a href="https://www.linkedin.com/in/ali-barnahad/"
+                          ><i class="fa-brands fa-linkedin"></i
+                        ></a>
                       </div>
-                      <div class="col">
-                        <i class="fa-brands fa-facebook"></i>
-                      </div>
-                      <div class="col">
-                        <i class="fa-brands fa-telegram"></i>
-                      </div>
-                      <div class="col">
-                        <i class="fa-brands fa-youtube"></i>
+                      <div class="col-6">
+                        <a href="https://t.me/Ali_Barnahad"
+                          ><i class="fa-brands fa-telegram"></i
+                        ></a>
                       </div>
                     </div>
                   </li>
