--- a/pricing.html
+++ b/pricing.html
@@ -425,17 +425,19 @@
       </section>
     </div>
 
-    <!-- footer -->
+   <!-- footer -->
     <footer id="call" class="py-5 px-3 night-sky2 rounded-top-5">
       <div class="container my-lg-5">
         <div class="row gy-4 my-lg-5" style="justify-content: center">
           <div class="col-lg-4 center-text">
             <h3
-              class="fw-bold text-white border-bottom border-3 mb-3 border-warning night-sky1 mybox py-2 px-5 text-white fs-4"
+              class="fw-bold text-white border-bottom border-3 mb-3 border-warning night-sky1 mybox py-2 px-5 text-white fs-5"
             >
-              Alio.com
+              شعار تبلیغاتی
             </h3>
-            <p class="center-text text-white">بر شانه غول ها بایستید</p>
+            <p class="center-text text-white">
+              با خیال راحت به کوه ها تکیه کنید
+            </p>
           </div>
           <div class="col-lg-4 d-none d-lg-block" style="width: fit-content">
             <div class="body-clock">
@@ -448,14 +450,13 @@
           </div>
           <div class="col-lg-4" style="text-align-last: center">
             <h3
-              class="fw-bold border-bottom text-white border-3 border-warning mb-3 pb-1 night-sky1 p-2 mybox py-2 px-5 text-white fs-4"
+              class="fw-bold border-bottom text-white border-3 border-warning mb-3 pb-1 night-sky1 p-2 mybox py-2 px-5 text-white fs-5"
             >
               تماس با من
             </h3>
-            <p class="text-white">صفحه اصلی</p>
-            <p class="text-white">محصولات</p>
-            <p class="text-white">درباره ی من</p>
-            <p class="text-white">خدمات</p>
+            <a href="tel:+989375882846" class="phone-link"
+              >برای تماس با من <b>کلیک</b> کنید</a
+            >
           </div>
         </div>
       </div>
