--- a/services.html
+++ b/services.html
@@ -239,40 +239,8 @@
     </div>
 
     <!-- footer -->
-    <footer id="call" class="py-5 px-3 night-sky2 rounded-top-5">
-      <div class="container my-lg-5">
-        <div class="row gy-4 my-lg-5" style="justify-content: center">
-          <div class="col-lg-4 center-text">
-            <h3
-              class="fw-bold text-white border-bottom border-3 mb-3 border-warning night-sky1 mybox py-2 px-5 text-white fs-5"
-            >
-              شعار تبلیغاتی
-            </h3>
-            <p class="center-text text-white">
-              با خیال راحت به کوه ها تکیه کنید
-            </p>
-          </div>
-          <div class="col-lg-4 d-none d-lg-block" style="width: fit-content">
-            <div class="body-clock">
-              <div class="clock">
-                <div class="hour"></div>
-                <div class="min"></div>
-                <div class="sec"></div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4" style="text-align-last: center">
-            <h3
-              class="fw-bold border-bottom text-white border-3 border-warning mb-3 pb-1 night-sky1 p-2 mybox py-2 px-5 text-white fs-5"
-            >
-              تماس با من
-            </h3>
-            <a href="tel:+989375882846" class="phone-link"
-              >برای تماس با من <b>کلیک</b> کنید</a
-            >
-          </div>
-        </div>
-      </div>
+    <footer class="footer">
+      <p>&copy; 1402 - 1401 کلیه حقوق سایت برای شرکت علیو محفوظ است.</p>
     </footer>
 
     <!-- bootstrap js -->
