--- a/courses.html
+++ b/courses.html
@@ -178,7 +178,7 @@
             مدارک کسب شده
           </h1>
          <p class="mt-3 mb-0 center-text">
-            برای مشاهده مدارک بیشتر در
+            برای مشاهده مدارک بیشتر بر
             <a
               style="text-decoration-line: none"
               href="https://www.linkedin.com/in/ali-barnahad/"
