--- a/story.html
+++ b/story.html
@@ -138,9 +138,9 @@
                   </li>
                   <li class="nav-item px-2">
                     <a
-                      class="nav-link text-dark box-show"
+                      class="nav-link text-dark box-show phone-link"
                       aria-current="page"
-                      href="#call"
+                      href="tel:+989375882846"
                     >
                       <i class="fa-solid fa-phone-flip fs-5 d-md-none"></i>
                       <span class="ms-2 fw-bold text-white">تماس با ما</span>
