--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                       href="#call"
                     >
                       <i class="fa-solid fa-phone-flip fs-5 d-md-none"></i>
-                      <span class="ms-2 fw-bold text-white">تماس با ما</span>
+                      <span class="ms-2 fw-bold text-white">ارتباط با ما</span>
                     </a>
                   </li>
 
