--- a/services.html
+++ b/services.html
@@ -239,8 +239,8 @@
     </div>
 
     <!-- footer -->
-    <footer class="footer">
-      <p>&copy; 1402 - 1401 کلیه حقوق سایت برای شرکت علیو محفوظ است.</p>
+   <footer class="footer rounded-top-4 night-sky1">
+     <p>&copy; 1402 - 1401 کلیه حقوق سایت برای شرکت علیو محفوظ است.</p>
     </footer>
 
     <!-- bootstrap js -->
